syntax = "proto3";

package movielist;

service MovielistService {
  rpc createMovielist (CreateMovielistRequest) returns (CreateMovielistResponse) {}
  rpc findByUserId (FindMovieListByUserRequest) returns (FindMovieListByUserResponse) {}
}

message CreateMovielistRequest {
  string nombre = 1;
  int32 idUser = 2;
}

message MovieList {
  int32 id = 1;
  string nombre = 2;
  int32 idUser = 3;
}

message CreateMovielistResponse {
  int32 status = 1;
  repeated string error = 2;
  MovieList movielist = 3;
}


message FindMovieListByUserRequest {
  int32 idUser = 1;
}

message FindMovieListByUserResponse {
  int32 status = 1;
  repeated string error = 2;
  repeated MovieList data = 3;
}